--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.5.2
-backports.zoneinfo==0.2.1
+backports.zoneinfo;python_version<"3.9"
 Django==4.1.1
 django-environ==0.9.0
 flake8==5.0.4
